# sample-sql-converter-agent-workshop

./: .gitignore  README.md  db_objects_summary.csv  deploy.sh  extract_db_objects.py  ora_connect_test.py  pg_connect_test.py  pyproject.toml  ssh-config
agent/: batch_getDDL.sh  getDDL.sh  main.py  mcp.json  object_list.ini  object_list_all.ini  pyproject.toml  run.sh  system_prompt.txt
agent/mcpserver/: oracle.py  postgres.py  server.py  shell.py
agent/prompts/: custom_prompt.txt  custom_prompt_1sortObject.txt  custom_prompt_2convert.txt  instructions.txt  sortObject.txt  system_prompt.txt  system_prompt_app.txt
agent/tools/: __init__.py  oracle.py  postgres.py  shell.py
agent/utils/: callbacks.py  logger.py
application/employee-mgmt/: architecture.md  readme.md
application/employee-mgmt/application/: Employee.java  EmployeeDao.java  EmployeeMapper.xml  EmployeeSearchCriteria.java  EmployeeService.java  mybatis-config.xml
application/employee-mgmt/database/: schema_oracle.sql  schema_postgre.sql
cdk/: .gitignore  README.md  cdk.context.json  package-lock.json  package.json
cdk/lib/: ora2pg-stack.ts  sql-converter-agent-stack.ts  sql-converter-stack.ts
cdk/lib/constructs/: aurora-serverless-pg.ts  dms-initialization.ts  dms-schema-conversion.ts  network.ts  oracle-db-instance.ts
cdk/scripts/: .bash_profile  install-oracle-xe.sh  listener.ora  redhat-release  setup.sql  tnsnames.ora
cdk/scripts/schema_sample/: 0001.sql  0002.sql  0003.sql  0004.sql  0005.sql  0006.sql  (+74 more)
import-schema/: 1pre.sh  2load.sh  README.md
load-scripts/: 1pre.sh  README.md
